<resources>
    <string name="app_name">NN ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_task">New Task</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="placeholder">PlaceHolder</string>
    <string name="checkbox">CheckBox</string>
    <string name="delete_button">Delete Button</string>
    <string name="logo">logo</string>
    <string name="select_time">Select Time</string>
    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>