<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/taskCellContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    android:backgroundTint="@color/PrimaryLight"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/cellItemLinearMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/completeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/checkbox"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/unchecked" />

        <LinearLayout
            android:layout_width="231dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="185dp"
                android:layout_height="77dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:paddingTop="16dp"
                android:text="@string/placeholder"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/dueTime"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="180dp"
                android:layout_height="44dp"
                android:layout_gravity="left"
                android:layout_marginRight="5dp"
                android:text="@string/placeholder"
                android:textColor="@color/grey"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/delete_button"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/close"
            />
    </LinearLayout>

</androidx.cardview.widget.CardView>